# For_Swim_Mockow

./: Dockerfile  README.md  TODO.txt  alembic.ini  docker-compose.yml  garb2.py  main.py  pyproject.toml  requirements.txt
backups/: db_backup_script.sh
bot/data/: .env.template  bot_cfg.py  format_text_html.py  redis_connection.py  smiles.py  texts.py
bot/db/: async_requests_db_postgres.py  db_cfg.py  drop_db.py  models_db_postgres.py  sync_requests_db_postgres.py  testern.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1917ae2f3780_create_user_table.py
bot/filters/: check_role.py
bot/handlers/: admins.py  custom.py  default.py  setter_handlers.py
bot/middlewares/: antispam_middleware.py  check_role_middleware.py  scheduler_middleware.py  set_middlewares.py
bot/scheduler/: apsched.py
bot/utils/: bot_commands.py
