[tool.poetry]
name = "examplebot"
version = "0.1.0"
description = ""
authors = ["ilia_volodin <vollodin61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
aioschedule = "^0"
aiosqlite = "^0.20.0"
alembic = "^1.13.0"
apscheduler = "^3"
apscheduler-di = "^0"
asyncpg = "^0.29.0"
black = "^24.2.0"
google-api-python-client = "^2.9.0"
google-auth-httplib2 = "^0"
google-auth-oauthlib = "^1"
gspread-asyncio = "^2.0.0"
gspread-formatting = "^1.1.2"
emoji = "^2.9.0"
environs = "^10.0.0"
oauth2client = "^4.1.3"
psycopg = "^3.1.15"
psycopg2 = "^2.9.9"
pytz = "^2024.1"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
